<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.ModelMVVM.AppWidget.Container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/widget_layout"
    android:theme="@style/Theme.ModelMVVM.AppWidgetContainer">

    <TextView
        android:id="@+id/appwidget_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/appwidget_blue"
        android:text="@string/appwidget_blue"
        android:textColor="@color/purple_200"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/appwidget_oficial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/appwidget_oficial"
        android:layout_below="@id/appwidget_blue"
        android:textColor="@color/light_blue_600"
        android:text="@string/appwidget_oficial"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/appwidget_minorista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/appwidget_oficial"
        android:contentDescription="@string/appwidget_minorista"
        android:text="@string/appwidget_minorista"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold|italic" />

</RelativeLayout>