<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/layout_default"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/bg_rounded_box"
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/oficialLayout"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/oficial"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/nombre"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/oficial_price"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textSize="14sp"
                android:text="@string/release"
                android:textStyle="italic"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/bg_rounded_box"
            android:gravity="center"
            android:id="@+id/blueLayout"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/blue"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/nombre"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/blue_price"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textSize="14sp"
                android:text="@string/release"
                android:textStyle="italic"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/bg_rounded_box"
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/minoristaLayout"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/minorista"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/nombre"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/minorista_price"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textSize="14sp"
                android:text="@string/release"
                android:textStyle="italic"/>

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shimmer_duration="1000">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:background="#C8C9C9"
                android:gravity="center"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:text="@string/dolar"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="10dp"
                    android:background="#383939"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="10dp"
                    android:background="#383939"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:background="#C8C9C9"
                android:gravity="center"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:text="@string/dolar"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="10dp"
                    android:background="#383939"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="10dp"
                    android:background="#383939"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:background="#C8C9C9"
                android:gravity="center"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:text="@string/dolar"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="10dp"
                    android:background="#383939"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="10dp"
                    android:background="#383939"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.appcompat.widget.LinearLayoutCompat>